--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
                 </script>
                 <!--End of Tawk.to Script-->
 
+            
+            
+            <!-- Google tag (gtag.js) -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=G-R708PPTBTK"></script>
+            <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-R708PPTBTK');
+            </script>
+
         </p>
 
     </body>
